--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -10,10 +10,16 @@
     border-radius: 10px;
     font-family: "Marck Script", cursive;
     font-size: 2em;
+    @include media-breakpoint-down(xs) {
+      font-size: 1.5em;
+    }
     margin-bottom: 1rem;
     span {
       font-weight: bold;
       font-size: 2.5rem;
+      @include media-breakpoint-down(xs) {
+        font-size: 1.5em;
+      }
     }
   }
   &.bg-opaque {
